--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -1,4 +1,7 @@
-<h2>注文情報の確認</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <h3>注文情報の確認</h3>
       <table>
         <thead class="table-warning">
           <th style="width: 35%">商品名</th>
@@ -9,9 +12,12 @@
         </thead>
         <tbody>
           <% @item.each do |item| %>
+          <tr><th>&nbsp;</th></tr>
           <tr>
-            <td><%= attachment_image_tag item.item, :image, format: '.jpeg', size: "60x40" %>
-                <%= item.item.name %></td>
+            <td>
+              <%= attachment_image_tag item.item, :image, format: '.jpeg', size: "60x40" %>
+              <%= item.item.name %>
+            </td>
             <td><%= item.item.add_tax_price.to_s(:delimited) %></td>
             <td><%= item.amount %></td>
             <td><%= item.add_tax_subtotal.to_s(:delimited) %></td>
@@ -20,9 +26,11 @@
           <% end %>
         </tbody>
       </table>
+    </div>
 
-      <div class="col-md-4">
+    <div class="col-md-4">
 　　　<table class="table table-bordered">
+　　　  <div>&nbsp;</div>
         <tr>
           <th>送料</th>
           <td>800</td>
@@ -36,21 +44,28 @@
           <td><%= (@total + 800).to_s(:delimited) %></td>
         </tr>
       </table>
-      </div>
+    </div>
+  </div>
 
+　<div class="row">
+　　<div class="col-md-6 float-left">
 　　　<table>
-　　　<tr>
-        <th>支払方法</th>
-        <td><%= Order.payment_methods_i18n[@order.payment_method] %></td>
-      </tr>
-      <tr>
-        <th>お届け先</th>
-        <td>〒<%= @order.postcode %>
-              <%= @order.address %><br>
-              <%= @order.name %></td>
-      </tr>
+　　　  <tr>
+          <th>支払方法</th>
+          <td class="col-md-6"><%= Order.payment_methods_i18n[@order.payment_method] %></td>
+        </tr>
+        <tr>
+          <th>お届け先</th>
+          <td class="col-md-6">〒<%= @order.postcode %>
+            <%= @order.address %><br>
+            <%= @order.name %>
+          </td>
+        </tr>
       </table>
-
+    </div>
+    <div class="col-md-5 float-right text-right">
+      <div>&nbsp;</div>
+      <div>&nbsp;</div>
       <%= form_with model: @order, url: orders_path, local:true do |f| %>
         <%= f.hidden_field :postcode, value: @order.postcode %>
         <%= f.hidden_field :address, value: @order.address %>
@@ -62,3 +77,6 @@
         <%= f.hidden_field :total_payment, value: @total %>
         <%= f.submit "注文を確定する", class:"mt-2 btn-success mb-5" %>
       <% end %>
+    </div>
+  </div>
+</div>
