--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -3,8 +3,7 @@
     <h3>注文履歴一覧</h3>
   </div>
 
-  <table class="table cart_items">
-    <!--クラス名修正？-->
+  <table>
     <tr>
       <th>購入日時</th>
       <th>購入者</th>
@@ -19,16 +18,12 @@
       </td>
       <td><%= order.name %></td>
       <td>
-        <%#= order.order_details.amount %>
         <%= order.order_details.sum(:amount) %>
         </td>
       <td>
-        <%#= Order.order_statuses_i18n[order.order.order_status] %>
         <%= order.status %>
-        <!--Gem必要？-->
       </td>
     </tbody>
     <% end %>
   </table>
-
 </div>
