--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -17,7 +17,7 @@
   <h2>新着情報</h2>
   <div class="row">
     <div class="d-flex flex-row mt-2"></div>
-      <div class="col-sm-3">
+      <div class="col">
         <div class="card">
           <% @items.last(4).reverse.each do |item| %>
           <div class="new-item">
