[Add]注文履歴詳細

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,12 +4,12 @@
       <h3>注文履歴一覧</h3>
       <table class="table table-bordered">
         <tr>
-          <th>注文日</th>
-          <th>配送先</th>
-          <th>注文商品</th>
-          <th>支払い金額</th>
-          <th>ステータス</th>
-          <th>注文詳細</th>
+          <th class="table-active">注文日</th>
+          <th class="table-active">配送先</th>
+          <th class="table-active">注文商品</th>
+          <th class="table-active">支払い金額</th>
+          <th class="table-active">ステータス</th>
+          <th class="table-active">注文詳細</th>
         </tr>
         <% @orders.each do |order| %>
             <tr>
