--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,40 +2,42 @@
   <div class="row">
     <div class="col">
       <h3>注文情報</h3>
-      <table class="orders">
+      <table class="table table-bordered ">
         <tr>
-          <th>注文日</th>
+          <td class="table-active">注文日</td>
           <td><%= @order.created_at.strftime("%Y/%m/%d") %></td>
         </tr>
         <tr>
-          <th>配送先</th>
+          <td class="table-active">配送先</td>
           <td><%= @order.address %></td>
         </tr>
         <tr>
-          <th>支払方法</th>
+          <td class="table-active">支払方法</td>
           <td><%= @order.payment_method_i18n %></td>
         </tr>
         <tr>
           <!--モデル参照-->
-          <th>ステータス</th>
+          <td class="table-active">ステータス</td>
           <td><%= @order.status_i18n %></td>
         </tr>
       </table>
     </div>
+
+
     <div class="col">
       <h3>請求情報</h3>
-      <table class="orders">
+      <table class="table table-bordered">
         <tr>
-          <th>商品合計</th>
-          <td><%= (@order.total_payment).to_s(:delimited) %></td>
+          <td class="table-active">商品合計</td>
+          <td><%= (@order.total_payment).to_s(:delimited) %> 円</td>
         </tr>
         <tr>
-          <th>配送料</th>
-          <td><%= @order.shipping_cost %></td>
+          <td class="table-active">配送料</td>
+          <td><%= @order.shipping_cost %> 円</td>
         </tr>
         <tr>
-          <th>ご請求額</th>
-          <td><%= (@order.total_payment + @order.shipping_cost).to_s(:delimited)%></td>
+          <td class="table-active">ご請求額</td>
+          <td><%= (@order.total_payment + @order.shipping_cost).to_s(:delimited)%> 円</td>
         </tr>
       </table>
     </div>
@@ -43,22 +45,20 @@
   <div class="row">
     <div class="col">
       <h3>注文内容</h3>
-      <table class="orders">
-        <thead>
-          <tr>
-            <th>商品</th>
-            <th>単価（税込）</th>
-            <th>個数</th>
-            <th>小計</th>
-          </tr>
-        </thead>
+      <table class="table table-bordered">
+        <tr>
+          <th class="table-active">商品</th>
+          <th class="table-active">単価（税込）</th>
+          <th class="table-active">個数</th>
+          <th class="table-active">小計</th>
+        </tr>
         <tbody>
           <% @order.order_details.each do |item| %>
           <tr>
             <td><%= item.item.name %></td>
-            <td><%= (item.item.add_tax_price) %></td>
-            <td><%= item.amount %></td>
-            <td><%= ((item.item.add_tax_price) * item.amount).to_s(:delimited) %></td>
+            <td><%= (item.item.add_tax_price) %> 円</td>
+            <td><%= item.amount %> 個</td>
+            <td><%= ((item.item.add_tax_price) * item.amount).to_s(:delimited) %> 円</td>
           </tr>
           <% end %>
         </tbody>
