--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -54,6 +54,8 @@
             <% @total +=  order_detail.price * order_detail.amount %>
             <td>
               <div>
+                <!--modelはネストしている為、親と子が必要-->
+                <!--urlは@orderとorder_detailの2つのidが必要-->
                 <%= form_with(model:[@order, order_detail], url: admin_order_order_detail_path(@order,order_detail), local: true) do |f| %>
                   <%= f.select :making_status, options_for_select([['着手不可'],['製作待ち'],['製作中'],['製作完了']], {:selected => order_detail.making_status}) %>
                   <%= f.submit "更新", class:"btn btn-success" %>
