--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,9 +1,7 @@
 <div class="container">
   <div class="row">
     <h3>注文履歴一覧</h3>
-  </div>
-
-  <table>
+  <table class="col-12">
     <tr>
       <th>購入日時</th>
       <th>購入者</th>
