--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
                 <li class="navbar-link"><%= link_to "商品一覧", items_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "カート", cart_items_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-dark" %></li>
+                </div>
               <% elsif admin_signed_in? %>
                 <li class="navbar-link"><%= link_to "商品登録", new_admin_item_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "商品一覧", admin_items_path, class: "btn btn-outline-dark" %></li>
@@ -41,10 +42,15 @@
                 <li class="navbar-link"><%= link_to "ログイン", new_customer_session_path, class: "btn btn-outline-dark" %></li>
               <% end %>
             </ul>
-                </div>
               </div>
             </div>
           </nav>
+          <div class="float-md-right">
+            <%= form_with method: :get, local: true do |f| %>
+              <%= f.text_field :name %>
+              <%= f.submit "検索" %>
+            <% end %>
+          </div>
     </header>
     <main class="mb-auto">
       <p id="notice"><%= notice %></p>
