--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -12,7 +12,11 @@
           <%= form_with(model:@cart_item, url:cart_items_path, local: true, method: :post, class:"form-inline mt-2") do |f| %>
             <%= f.hidden_field :item_id, value: @item.id %>
             <%= f.select :amount, *[1..10] %>
-            <%= f.submit "カートに入れる", class:"btn btn-primary btn-sm ml-4" %>
+            <% if @item.is_active == true %>
+              <%= f.submit "カートに入れる", class:"btn btn-primary btn-sm ml-4" %>
+            <% else %>
+              <p class="btn-danger btn-sm ml-4">売り切れ</p>
+            <% end %>
           <% end %>
         </div>
       </div>
