--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,12 +4,15 @@
     <div class="col-md-9 ">
       <div class="mv-top mb-5">
         <div class="text-red font-weight-bold py-5 px-5">
+            <div class = "message">
             <h2>ようこそ、ながのCAKEへ！</h2>
             <p>
               このサイトは、ケーキ販売のECサイトになります。<br>
               会員でない方も商品の閲覧はできますが、<br>
-              購入には会員登録が必要になります。
+              購入には会員登録が必要になります。<br>
+              <%= image_tag('tamago.jpg') %>
             </p>
+            </div>
         </div>
       </div>
     </div>
