--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -11,6 +11,9 @@
               会員でない方も商品の閲覧はできますが、<br>
               購入には会員登録が必要になります。<br>
               <%= image_tag('tamago.jpg') %>
+              <%= image_tag('cooking.jpeg') %>
+              <%= image_tag('item.png') %>
+              <%= image_tag('welcome.jpg') %>
             </p>
             </div>
         </div>
